# xynginc

./: .gitignore  LICENSE.md  README.md  d.sh  i.sh  package-lock.json  package.json  test_dynamic_host.ts  test_dynamic_host_config.json  tsconfig.json  xypriss.config.jsonc  xypriss.plugin.xsig
core/: Cargo.toml
core-go/: go.mod  main.go
core-go/backup/: backup.go
core-go/check/: check.go  requirements.go
core-go/configs/: error.html  general.conf  index.html  non_ssl_template.conf
core-go/constants/: constants.go
core-go/engine/: apply.go  cleanup.go  config.go  domain.go  nginx.go  utils_modules.go
core-go/firewall/: firewall.go
core-go/logger/: logger.go
core-go/models/: models.go
core-go/ssl/: ssl.go
core/src/: main.rs  requirements.rs
core/src/configs/: default.conf  error.html  general.conf  index.html  nginx_main.conf  non_ssl_template.conf  ssl_template.conf
core/src/configs/errors/: 301.html  400.html  401.html  403.html  404.html  50x.html
core/src/mods/: MODULE_DEPENDENCIES.md  apply.rs  backup.rs  check.rs  cleanup.rs  cli.rs  config.rs  constants.rs  domain.rs  logger.rs  mod.rs  models.rs  nginx.rs  nginx_modules.rs  ssl.rs  utils.rs
core/src/scripts/: fix-apt-repos.sh
docs/: BUILD_FROM_SOURCE.md  INSTALLATION.md  MOD.md
release/v1.0.0/: RELEASE_NOTES.md
scripts/: build-cross.sh  build.sh  cli.js  install.sh  interactive.install.sh  postinstall.js
src/: downloadBinary.ts  index.ts  logger.ts  requirements.ts  startPlugin.ts  types.ts  validateConfig.ts
test/: index.ts  package-lock.json  package.json
(+62 files in other folders)
