[package]
name = "xynginc"
version = "1.3.0"
edition = "2024"
authors = ["Seth Eleazar/ iDevo"]
description = "XyPriss Nginx Controller - Simplifie la gestion de Nginx et SSL"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
chrono = "0.4"
atty = "0.2"
colored = "2.1"

[profile.release]
opt-level = 3       # Optimisation maximale
lto = true          # Link-Time Optimization
codegen-units = 1   # Meilleure optimisation
strip = true        # Retire les symboles debug (binaire plus petit)